allignment html, maybe fix safari overflow

--- a/CSS/root.css
+++ b/CSS/root.css
@@ -13,15 +13,15 @@
 }
 
 body {
-        width: 100%;
-        background-color: var(--black);
-        overflow-x: hidden;
-        display: inline-flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-self: center;
-        
-    }
+    width: 100%;
+    background-color: var(--black);
+    overflow-x: hidden;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-self: center;
+    overscroll-behavior: none;
+}
 
 a, button {
     cursor: pointer;
